# commerce-logs-pipeline

./: .gitignore  AGENTS.md  DEVELOPMENT.md  DOCKER.md  Makefile  README.md  docker-compose.app.yml  docker-compose.yml  go.work  pipeline_design.md
.cursor/rules/: commenting.mdc
cli/: pyproject.toml
cli/commerce_logs_cli/: __init__.py  explore_raw_logs_cli.py  list_blobs_cli.py  setup_config_cli.py
cli/config/: config_template.yaml
cli/scripts/: explore_raw_logs.py  inspect_blob_properties.py  list_blobs.py  setup_secure_config.py
cli/src/: __init__.py  azure_client.py  config.py
configs/: kafka_topics.yaml
configs/opensearch/: traces_index_mapping.json
deployments/opensearch/: Dockerfile  README.md  docker-compose.yml
docs/: blob-selectors.md  blob-structure.md  concepts.md  trace-model.md
pipeline/blob-monitor/: .gitignore  Dockerfile  Makefile  README.md  config.go  config.yaml.example  events.go  go.mod  go.sum  main.go  selectors.go
pipeline/config/: config.go  go.mod
pipeline/events/: Makefile  README.md  avro_schemas.go  blob.go  extraction.go  go.mod  ingestion.go  kafka-topics.properties  keys.go  keys_test.go  topics.go
pipeline/extraction/: .gitignore  AppLogsExtraction.md  Makefile  README.md  go.mod  go.sum
pipeline/ingest/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
pipeline/log-tail/: Makefile  README.md  config.yaml.example  go.mod  go.sum  main.go
pipeline/traces/: Makefile  README.md  go.mod  model.go
tools/kafka-init/: go.mod  main.go
tools/opensearch-init/: Makefile  README.md  go.mod  go.sum  main.go
(+42 files in other folders)
